# Non-obtuse-Triangulation-of-Planar-Straight-Line-Graphs-Project

./: .gitignore  CMakeLists.txt  firstp.cpp  input.json  opt_triangulation.cpp  triangulationcpp.txt
CGAL-5.6.1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  firstp.cpp  input.json
CGAL-5.6.1/include/CGAL/: CMakeLists.txt
graphics/: graphics.cpp  graphics.h
output/: output.json
tests/: input.json  tests.txt
tests/example_instances_rev1/example_instances/: cgshop2025_examples_ortho_100_5b9b478f.instance.json  cgshop2025_examples_ortho_10_ff68423e.instance.json  cgshop2025_examples_ortho_150_a39ede60.instance.json  cgshop2025_examples_ortho_20_b099d1fe.instance.json  cgshop2025_examples_ortho_250_d9594e89.instance.json  cgshop2025_examples_ortho_40_e5365b34.instance.json  cgshop2025_examples_ortho_60_f31194db.instance.json  cgshop2025_examples_ortho_80_f9b89ad1.instance.json  cgshop2025_examples_point-set_100_5da0b4c3.instance.json  cgshop2025_examples_point-set_10_b4ff36df.instance.json  cgshop2025_examples_point-set_150_3334f8a1.instance.json  cgshop2025_examples_point-set_20_9816a49d.instance.json  cgshop2025_examples_point-set_250_c4545664.instance.json  cgshop2025_examples_point-set_40_16c501a5.instance.json  cgshop2025_examples_point-set_60_340abec8.instance.json  cgshop2025_examples_point-set_80_3d8b193e.instance.json  cgshop2025_examples_simple-polygon-exterior-20_100_a61e9aed.instance.json  cgshop2025_examples_simple-polygon-exterior-20_10_a557fecb.instance.json  cgshop2025_examples_simple-polygon-exterior-20_150_b988b15c.instance.json  cgshop2025_examples_simple-polygon-exterior-20_20_80175658.instance.json  cgshop2025_examples_simple-polygon-exterior-20_250_329290ff.instance.json  cgshop2025_examples_simple-polygon-exterior-20_40_97467655.instance.json  cgshop2025_examples_simple-polygon-exterior-20_60_5da99fdb.instance.json  cgshop2025_examples_simple-polygon-exterior-20_80_23272e96.instance.json  cgshop2025_examples_simple-polygon-exterior_100_cab2e84d.instance.json  cgshop2025_examples_simple-polygon-exterior_10_34daa0f6.instance.json  cgshop2025_examples_simple-polygon-exterior_150_c5de53a9.instance.json  cgshop2025_examples_simple-polygon-exterior_20_98b56c77.instance.json  cgshop2025_examples_simple-polygon-exterior_250_e264ffed.instance.json  cgshop2025_examples_simple-polygon-exterior_40_3df495b2.instance.json  cgshop2025_examples_simple-polygon-exterior_60_82e60438.instance.json  cgshop2025_examples_simple-polygon-exterior_80_a3bb9743.instance.json  cgshop2025_examples_simple-polygon_100_3b35441e.instance.json  cgshop2025_examples_simple-polygon_10_81177380.instance.json  cgshop2025_examples_simple-polygon_150_93dc034e.instance.json  cgshop2025_examples_simple-polygon_20_4a633781.instance.json  cgshop2025_examples_simple-polygon_250_7129aa6f.instance.json  cgshop2025_examples_simple-polygon_40_986defab.instance.json  (+2 more)
triangulation/: triangulation.cpp  triangulation.h
utils/: utils.cpp  utils.h
